# AntHocNet

./: .cz.toml  .dockerignore  .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug-report.yml  chore.yml  config.yml  enhancement.yml
.github/workflows/: benchmarks.yml  ci.yml  images.yml  lint.yml  paper-benchmark.yml  pr-title.yml  release.yml  rescue-artifacts.yml  scenario-matrix.yml
core/: CMakeLists.txt
core/include/anthocnet/core/: ant_history.h  ant_message.h  ant_message_codec.h  ant_router_logic.h  config.h  link_metric.h  pheromone_engine.h  pheromone_table.h  ports.h  route_decision.h  types.h  visited_path.h
core/src/: ant_history.cpp  ant_message_codec.cpp  ant_router_logic.cpp  pheromone_engine.cpp  pheromone_table.cpp
core/tests/: CMakeLists.txt  fuzz_codec.cpp  test_ant_history.cpp  test_backant_metric.cpp  test_beta_selection.cpp  test_codec.cpp  test_core_paths.cpp  test_data_routing.cpp  test_diffusion.cpp  test_evaporation_backoff.cpp  test_link_failure.cpp  test_link_metric.cpp  test_mac_metric.cpp  test_network_integration.cpp  test_observability.cpp  test_pheromone_engine.cpp  test_pheromone_table.cpp  test_proactive.cpp  test_properties.cpp  test_router_logic.cpp  test_support.h
docker/: Dockerfile.ns2  Dockerfile.ns3  README.md
docs/: ant-colony-routing.md  architecture.md  benchmarks.md  cross-validation.md  fidelity.md  porting-notes.md  wire-format.md
docs/adr/: 0001-record-architecture-decisions.md  0002-one-core-two-adapters.md  0003-pure-core-returns-route-decisions.md  0004-pod-ant-messages-and-codec.md  0005-ns2-idempotent-anchor-patch.md  0006-on-wire-protocol-version.md  0007-proactive-diffusion-gated.md  0008-neighbour-liveness-two-detectors.md  0009-backward-ants-carry-path-not-state.md  0010-data-forwarding-prevhop-excluded-stochastic.md  0011-nodeaddress-is-ip-broadcast-is-an-action.md  0012-evaporation-is-a-secondary-safety-net.md  0013-track-bugs-and-findings-as-issues.md  0014-agent-skills-are-script-first.md
docs/benchmarks/: README.md
docs/handoffs/: 2026-06-28-detector-d-link-failure.md
docs/improvements/: 01-data-vs-ant-beta.md  02-backward-ant-delay-metric.md  03-pheromone-diffusion.md  04-proactive-ant-sessions.md  05-link-failure-detection-and-repair.md  06-evaporation-and-minor.md  07-validation-and-benchmarks.md  09-landscape-and-positioning.md  (+9 more)
ns2/: Makefile  README.md
ns3/: CMakeLists.txt  Makefile  README.md  wscript
paper/: README.md  paper.bib  paper.md
(+200 files in other folders)
